--- a/src/index.css
+++ b/src/index.css
@@ -128,6 +128,10 @@ label.product_id:after {
   margin: 10px 0 10px 0;
 }
 
+input.error {
+  border: 1px solid red;
+}
+
 .address_input {
   margin: 6px 0 6px 0;
 }
