--- a/src/scss/table.scss
+++ b/src/scss/table.scss
@@ -1,7 +1,7 @@
 // Table
 .table {
   display: table;
-  text-align: center;
+  text-align: left;
   width: 60%;
   margin: 10% auto 0;
   border-collapse: separate;
